# cpp-project-template

./: .gitignore  .gitmodules  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
benchmark/: CMakeLists.txt  main.cpp
benchmark/test/module/: module-test.cpp
include/cpp-project-template/common/: common.h
include/cpp-project-template/module/: module.h
src/: CMakeLists.txt
src/module/: module.cpp
test/: CMakeLists.txt  module-test.cpp
test/module/: module-test.cpp
